--- a/ConvertingCoordinates/20200523_openASO_position.Rmd
+++ b/ConvertingCoordinates/20200523_openASO_position.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "20200522_openASO_position"
-author: "Kim Wellman"
+author: "Kim Wellman" (james edits)
 date: "05/22/2020"
 output:
   html_document: 
