--- a/CovertingCoordinates/openASO_position.Rmd
+++ b/CovertingCoordinates/openASO_position.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "20201120_openASO_position"
+title: "20201214_openASO_position"
 author: "Kim Wellman, Lela Lackey"
-date: "11/20/2020"
+date: "12/14/2020"
 output:
   html_document: 
     code_folding: hide
@@ -27,13 +27,16 @@ library(EnsDb.Hsapiens.v86)
 library(insect)
 library(dplyr)
 
+# set up wd
+wdir <- setwd("~/Documents/school/openASO/CovertingCoordinates/")
+  
 ```
 
 ### Data input: pre-processed data from Ivan and Axel
 
 ```{r import, echo = TRUE, warning = FALSE}
 
-genseq_byaso <- read.csv("~/ASO_position_script/Complete_ASOtoTranscriptSeq.tsv", sep="", stringsAsFactors=FALSE)
+genseq_byaso <- read.csv("Complete_ASOtoTranscriptSeq.tsv", sep = "", stringsAsFactors = FALSE)
 
 # generate the reverse complement of the ASOs.
 genseq_byaso$aso_rc_seq <- rc(genseq_byaso$ASOseq)
@@ -41,6 +44,9 @@ genseq_byaso$aso_rc_seq <- rc(genseq_byaso$ASOseq)
 # confirm geneID of isoform to transcript_id
 genseq_byaso$transcript_id <- gsub("\\..*","",genseq_byaso$hg38.knownGene.name)
 
+
+# make smol
+genseq_byaso <- tail(genseq_byaso,1000)
 ```
 
 ### Map the transcriptomic coordinates
@@ -72,36 +78,61 @@ aso_txt_pos <- na.omit(aso_txt_pos, cols = "start")
 
 ```{r genomic coordinates, warning = FALSE}
 
-# convert the transcript position information into an IRanges format. 
-# ir <- IRanges(start = aso_txt_pos$start, end = aso_txt_pos$end, width = (aso_txt_pos$end - aso_txt_pos$start + 1), names = aso_txt_pos$transcript_id)
+# convert the transcript position information into an IRanges format.
+# add an ASO group number 'aso_grp' to be able to connect two genome ranges corresponding to the same ASO, but spanning exons.
 
-ir <- IRanges(start = aso_txt_pos$start, width = (aso_txt_pos$end - aso_txt_pos$start + 1), names = aso_txt_pos$transcript_id)
+# grp_list <- lapply(aso_txt_pos, function(x){lapply(x, row.names)})
+# grp_list <- lapply(aso_txt_pos, function(x){lapply(x, row.names); x})
+
+# ir <- IRanges(start = aso_txt_pos$start, width = (aso_txt_pos$end - aso_txt_pos$start), names = aso_txt_pos$transcript_id, aso_grp = rownames(aso_txt_pos))
+
+ir <- IRanges(start = aso_txt_pos$start, width = (aso_txt_pos$end - aso_txt_pos$start), names = aso_txt_pos$transcript_id, aso_grp = list(rownames(aso_txt_pos)))
 
 # create an EnsDB object containing genomic position information.
 dbfile <- system.file("extdata/EnsDb.Hsapiens.v86.sqlite", package = "EnsDb.Hsapiens.v86")
 db <- EnsDb(dbfile)
 
-gr <- transcriptToGenome(ir, db)
+# latest version of X.toGenome tries to replace id with a group identifier. Defaults to using 'NAMES'/transcript id which is not unique enough to join back at the very end.
+
+# gr <- transcriptToGenome(ir, db)
+# gr <- transcriptToGenome(ir, db, id = mcols(ir)[,1])
+gr <- transcriptToGenome(ir, db, id = mcols(ir)$aso_grp)
+  
+```
+
+```{r GRanges to data frame, warning = FALSE}
+
+# create dataframe from GrangesList which groups GRanges together, ASOs by transcript. aso_grp connects multiple ranges (across exons) back to the original ASO. 
+
+# unlist the GRanges object to be able to pull transcript start/end information without direct reference to transcript.
+gr_unlist <- unlist(gr, recursive = TRUE, use.names = TRUE)
+
+gnm_df <- data.frame(loci = seqnames(gr_unlist), 
+                     starts = start(gr_unlist) - 1,
+                     ends = end(gr_unlist), 
+                     strand = strand(gr_unlist), 
+                     gr_unlist@ranges@width, 
+gr_unlist@elementMetadata@listData[["tx_id"]], gr_unlist@elementMetadata@listData[["tx_start"]], gr_unlist@elementMetadata@listData[["tx_end"]]) 
+
+# clean up column names and data frame
+colnames(gnm_df)[colnames(gnm_df) ==
+                   "gr_unlist.elementMetadata.listData...tx_start..."] <- "tx_start"
+colnames(gnm_df)[colnames(gnm_df) ==
+                   "gr_unlist.elementMetadata.listData...tx_end..."] <- "tx_end"
+colnames(gnm_df)[colnames(gnm_df) ==
+                   "gr_unlist.elementMetadata.listData...tx_id..."] <- "tx_id"
+colnames(gnm_df)[colnames(gnm_df) ==
+                   "gr_unlist.ranges.width"] <- "width"
 
 ```
 
 ```{r GRanges to BED format, warning = FALSE}
+# create new data frame that connects ASO info to generated genome range info.
 
-# create dataframe from GrangesList which groups GRanges together, ASOs by transcript. Loci.group connects multiple ranges (across exons) back to the original ASO. 
-# in order to connect the groups (potentially multiple GRanges when ASOs cross exons), we need the corresponding txt start/stop. 
+final_df <- dplyr::full_join(aso_txt_pos, gnm_df, by = c('transcript_id' = 'tx_id', 'start' = 'tx_start', 'end' = 'tx_end', ))
 
-gnm_df <- data.frame(loci = seqnames(gr), 
-  starts = start(gr) - 1,
-  ends = end(gr), gr@unlistData@elementMetadata@listData[["tx_start"]], gr@unlistData@elementMetadata@listData[["tx_end"]]) 
-
-colnames(gnm_df)[colnames(gnm_df) == "gr.unlistData.elementMetadata.listData...tx_start..."] <- "tx_start"
-colnames(gnm_df)[colnames(gnm_df) == "gr.unlistData.elementMetadata.listData...tx_end..."] <- "tx_end"
-
-gnm_df <- gnm_df %>% dplyr::select(loci.group_name, loci.value, loci.group, starts.value, ends.value, tx_start, tx_end)
-
-final_df <- full_join(aso_txt_pos, gnm_df, by = c('transcript_id' = 'loci.group_name', 'start' = 'tx_start', 'end' = 'tx_end'))
-
-# reshape the data by the loci.group
+# add a unique identifier
+final_df$uniq_id <- paste(final_df$GeneID, "_", final_df$ASOseq)
 
 # convert the data frame to bed format.
 
